--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,8 @@
 {
   "presets": ["@babel/preset-env", "@babel/preset-react"],
-  "plugins": [["module-resolver", { "root": ["./src"] }]]
+  "plugins": [
+    ["module-resolver", { "root": ["./src"] }],
+    "@emotion/babel-plugin",
+    ["lodash", { "id": ["lodash", "recompose"] }]
+  ]
 }
