--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "webpack": "^5.15.0"
   },
   "dependencies": {
+    "@babel/cli": "^7.12.10",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-module-resolver": "^4.1.0",
     "recompose": "^0.30.0"
   }
