--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/cli": "^7.12.10",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-module-resolver": "^4.1.0",
+    "react-router-dom": "^5.2.0",
     "react-transition-group": "^4.4.1",
     "recompose": "^0.30.0"
   }
