--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
+    "@tsconfig/node12": "^1.0.9",
     "babel-loader": "^8.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -31,11 +32,15 @@
   },
   "dependencies": {
     "@babel/cli": "^7.12.10",
+    "@types/node": "^16.10.5",
+    "@types/react": "^17.0.29",
+    "@types/react-dom": "^17.0.9",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-module-resolver": "^4.1.0",
     "prop-types": "^15.7.2",
     "react-router-dom": "^5.2.0",
     "react-transition-group": "^4.4.1",
-    "recompose": "^0.30.0"
+    "recompose": "^0.30.0",
+    "typescript": "^4.4.4"
   }
 }
