--- a/package.json
+++ b/package.json
@@ -31,16 +31,16 @@
     "webpack": "^5.15.0"
   },
   "dependencies": {
+    "typescript": "^4.4.4",
     "@babel/cli": "^7.12.10",
-    "@types/node": "^16.10.5",
-    "@types/react": "^17.0.29",
+    "@types/node": "^16.11.1",
+    "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-module-resolver": "^4.1.0",
     "prop-types": "^15.7.2",
     "react-router-dom": "^5.2.0",
     "react-transition-group": "^4.4.1",
-    "recompose": "^0.30.0",
-    "typescript": "^4.4.4"
+    "recompose": "^0.30.0"
   }
 }
