--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
     "@emotion/styled": "^11.0.0",
     "@tsconfig/node12": "^1.0.9",
     "babel-loader": "^8.2.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
     "react-styleguidist": "^11.1.5",
     "webpack": "^5.15.0"
   },
@@ -42,5 +40,8 @@
     "react-router-dom": "^5.2.0",
     "react-transition-group": "^4.4.1",
     "recompose": "^0.30.0"
+  },
+  "exports": {
+    ".": "./src/components"
   }
 }
