--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "extends": "@tsconfig/node12/tsconfig.json",
+    // "extends": "@tsconfig/node12/tsconfig.json",
     "compilerOptions": {
       "jsx": "react",
       "preserveConstEnums": true
